[workspace]
resolver = "2"

members = ["day-*"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"

[workspace.dependencies]
regex = "1.10"
itertools = "0.13"
rayon = "1.8"
glam = "0.28"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rstest = "0.21"
rstest_reuse = "0.7"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.flamegraph]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"
